# SwiftNG

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  args.c  args.h  gccdump.s  index.c  index.h  main.c
edu/humboldt/wbi/: args.h  array.c  array.h  graph.c  graph.h  hashmap.c  hashmap.h  index.c  index.h  iterator.c  iterator.h  ngram.c  ngram.h  quadtree.c  quadtree.h  treeset.c  treeset.h  vertex.c  vertex.h
edu/humboldt/wbi/ngrams/: ngramfns.h
src/: args.c  array.c  defines.h  hashfns.c  hashfns.h  hashmap.c  index.c  index.h  iterator.c  iterator.h  main.c  matching.h  ngram.c  ngramfns.c  ngramfns.h  treeset.c  treeset.h  vertex.h
